deploy-app-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-test
  name: app-test
  namespace: app-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-test
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
