ingress-app-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  creationTimestamp: null
  name: app-test
  namespace: app-test
spec:
  rules:
  - host: app-test.kubernetes.internal
    http:
      paths:
      - backend:
          service:
            name: app-test
            port:
              name: https
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
